# rtl819x_3411d_alexa

rtl819x/: .config  .config.old  .config.shs17  .oldconfig  Kconfig  Kconfig.patch  Makefile  Makefile.patch  target
rtl819x/boards/rtl8197F/: Makefile  board-configuration.in  board_config_model.in  config.busybox-1.13.RTL8197F_8822B_8211_5680_AP  config.in  config.linux-3.10.RTL8197F_8822B_8211_5680_AP  config.users.RTL8197F_8822B_8211_5680_AP  etc
rtl819x/boards/rtl8197F/bsp/: gpio.c
rtl819x/boards/rtl8197F/etc.RTL8197F_8822B_8211_5680_AP/: profile
rtl819x/boards/rtl8197F/etc.RTL8197F_8822B_8211_5680_AP/init.d/: rcS_AP  rcS_GW
rtl819x/boards/rtl8197F/etc.RTL8197F_NAND/: profile
rtl819x/boards/rtl8197F/etc.RTL8197F_NAND/init.d/: rcS_AP  rcS_GW
rtl819x/boards/rtl8197F/tmpfs/include/: appconfig.h
rtl819x/boards/rtl8197F/tools/: mkimg
rtl819x/linux-3.10/: .config.old  .config.shs17
rtl819x/linux-3.10/drivers/char/: rtl_gpio.c
rtl819x/linux-3.10/drivers/tty/serial/: Makefile  i2c_gpio.c
rtl819x/linux-3.10/net/netlink/: af_netlink.c
rtl819x/linux-3.10/scripts/kconfig/: .conf.o.cmd  .mconf.cmd  .mconf.o.cmd  .zconf.tab.o.cmd  conf  mconf
rtl819x/linux-3.10/scripts/kconfig/lxdialog/: .checklist.o.cmd  .inputbox.o.cmd  .menubox.o.cmd  .textbox.o.cmd  .util.o.cmd  .yesno.o.cmd
rtl819x/linux-3.10/sound/soc/: soc-utils.c
rtl819x/linux-3.10/sound/soc/rtk/: Kconfig  Makefile  audio_event.c  (+7 more)
rtl819x/toolchain/msdk-4.4.7-mips-EL-3.10-u0.9.33-m32t-160706/lib/: libdbus-1.la  libdbus-1.so.3  libdbus-1.so.3.16.4
rtl819x/users/: .config  COMMON_FLAGS.mk  Kconfig  Makefile
rtl819x/users/WiFi_Audio/: Kconfig  Makefile
rtl819x/users/WiFi_Audio/avs/: Makefile
rtl819x/users/WiFi_Audio/curl/: Makefile
rtl819x/users/WiFi_Audio/dlna_renderer/: Makefile  Playbin.xml  asound.conf  fake_gupnp-dlna-1.0.pc  freedesktop.org.xml  gst-registry  mips-linux.cache  rygel.conf
rtl819x/users/WiFi_Audio/dlna_renderer/gst-plugins-base-0.10.36/gst-libs/gst/: Makefile.am  Makefile.in
rtl819x/users/WiFi_Audio/dlna_renderer/gst-plugins-base-0.10.36/gst-libs/gst/app/: Makefile.in
rtl819x/users/WiFi_Audio/dlna_renderer/gst-plugins-base-0.10.36/gst-libs/gst/audio/: Makefile.in  gstaudiosink.c  gstaudiosink.h  gstbaseaudiosink.c  gstringbuffer.h
rtl819x/users/WiFi_Audio/dlna_renderer/gst-plugins-base-0.10.36/gst-libs/gst/cdda/: Makefile.in
rtl819x/users/WiFi_Audio/dlna_renderer/gst-plugins-base-0.10.36/gst-libs/gst/fft/: Makefile.in
rtl819x/users/WiFi_Audio/dlna_renderer/gst-plugins-base-0.10.36/gst-libs/gst/floatcast/: Makefile.in
rtl819x/users/WiFi_Audio/dlna_renderer/gst-plugins-base-0.10.36/gst-libs/gst/interfaces/: Makefile.in
rtl819x/users/WiFi_Audio/dlna_renderer/gst-plugins-base-0.10.36/gst-libs/gst/netbuffer/: Makefile.in
rtl819x/users/WiFi_Audio/dlna_renderer/gst-plugins-base-0.10.36/gst-libs/gst/pbutils/: Makefile.in
rtl819x/users/WiFi_Audio/dlna_renderer/gst-plugins-base-0.10.36/gst-libs/gst/riff/: Makefile.in  riff-media.c
rtl819x/users/WiFi_Audio/dlna_renderer/gst-plugins-base-0.10.36/gst-libs/gst/rtp/: Makefile.in
rtl819x/users/WiFi_Audio/dlna_renderer/gst-plugins-base-0.10.36/gst-libs/gst/rtsp/: Makefile.in
rtl819x/users/WiFi_Audio/dlna_renderer/gst-plugins-base-0.10.36/gst-libs/gst/sdp/: Makefile.in
rtl819x/users/WiFi_Audio/dlna_renderer/gst-plugins-base-0.10.36/gst-libs/gst/tag/: Makefile.in
rtl819x/users/WiFi_Audio/dlna_renderer/gst-plugins-base-0.10.36/gst-libs/gst/video/: Makefile.in
rtl819x/users/WiFi_Audio/dlna_renderer/gupnp-av-0.10.2/: AUTHORS  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.ac  gupnp-av-1.0-uninstalled.pc.in  gupnp-av-1.0.pc.in
rtl819x/users/WiFi_Audio/dlna_renderer/gupnp-av-0.10.2/doc/: Makefile.am  Makefile.in  gupnp-av-docs.sgml  gupnp-av-sections.txt  gupnp-av.types
rtl819x/users/WiFi_Audio/dlna_renderer/gupnp-av-0.10.2/doc/html/: GUPnPDIDLLiteContainer.html  GUPnPDIDLLiteContributor.html  GUPnPDIDLLiteDescriptor.html  GUPnPDIDLLiteItem.html  GUPnPDIDLLiteObject.html  GUPnPDIDLLiteParser.html  GUPnPDIDLLiteResource.html  GUPnPDIDLLiteWriter.html  GUPnPLastChangeParser.html  GUPnPProtocolInfo.html  GUPnPSearchCriteriaParser.html  annotation-glossary.html  ch01.html  ch02.html  gupnp-av-Error-codes.html  gupnp-av.devhelp  gupnp-av.devhelp2  index.html  index.sgml
rtl819x/users/WiFi_Audio/dlna_renderer/gupnp-av-0.10.2/libgupnp-av/: Makefile.am  Makefile.in  gupnp-av-marshal.list  gupnp-didl-lite-parser.c
rtl819x/users/WiFi_Audio/dlna_renderer/gupnp-av-0.10.2/tests/: Makefile.am  Makefile.in  check-search.c  test-search-criteria-parser.c
rtl819x/users/WiFi_Audio/dlna_renderer/gupnp-av-0.10.2/tests/gtest/: Makefile.am  Makefile.in  test-regression.c
rtl819x/users/WiFi_Audio/dlna_renderer/shared-mime-info-1.0/: ChangeLog  HACKING  Makefile.am  Makefile.in  NEWS  aclocal.m4  config.h.in  configure  configure.in  freedesktop.org.xml.in  shared-mime-info-spec.xml  shared-mime-info.pc.in  test-subclassing.c  test-tree-magic.c  update-mime-database.c
rtl819x/users/WiFi_Audio/dlna_renderer/shared-mime-info-1.0/po/: ChangeLog  LINGUAS  POTFILES.skip  ar.po  az.po  be@latin.po  bg.po  bg_BG.po  bn_IN.po  ca.po  ca@valencia.po  cs.po  cy.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fa_IR.po  fi.po  fo.po  fr.po  ga.po  gl.po  he.po  hi.po  hu.po  id.po  it.po  ja.po  kk.po  ko.po  lt.po  lv.po  ms.po  nb.po  nl.po  nn.po  (+20 more)
rtl819x/users/WiFi_Audio/internet_radio/: Makefile  netRadioServer
rtl819x/users/WiFi_Audio/shm/: Makefile  wfshm.h
rtl819x/users/alsa_related/: Makefile
rtl819x/users/boa/: Makefile
rtl819x/users/boa/apmib/: apmib.c  apmib.h  mibdef.h
rtl819x/users/boa/defconfig/: Makefile  config-askey.txt
rtl819x/users/boa/html/: Makefile  syslog.htm
rtl819x/users/boa/src/: fmget.c  fmmgmt.c  version.c
rtl819x/users/boa/system/: Makefile  set_bridge.c  set_init.c
rtl819x/users/boa/utils/: flash.c
rtl819x/users/busybox-1.13/: .config
rtl819x/users/busybox-1.13/include/: autoconf.h
rtl819x/users/udhcp-0.9.9-pre/: Makefile  dhcpc.c
(+2582 files in other folders)
